--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,23 @@
-# ? Port de l'application
 server.port=8084
 
-# ? Configuration H2 (base en mémoire)
-spring.datasource.url=jdbc:h2:mem:produits-db
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
+spring.datasource.url=jdbc:mysql://localhost:3306/ma-boutique-db?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
 spring.datasource.password=
 
-# ? Hibernate
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
 
-# ? Console H2 (pour voir la base via navigateur)
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
+spring.mvc.format.date=yyyy-MM-dd
+
+
+# Configuration Cloudinary
+cloudinary.cloud-name=duqpq0teg
+cloudinary.api-key=364578432324232
+cloudinary.api-secret=**********
+
+# Configuration pour les fichiers (optionnel)
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
