recuperation de crud version1

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,9 +14,9 @@ spring.mvc.format.date=yyyy-MM-dd
 
 
 # Configuration Cloudinary
-cloudinary.cloud-name=duqpq0teg
-cloudinary.api-key=364578432324232
-cloudinary.api-secret=3jOX4u6iPm74-Z2OKy
+cloudinary.cloud_name=duqpq0teg
+cloudinary.api_key=364578432324232
+cloudinary.api_secret=3jOX4u6iPm74-Z2OKy
 
 # Configuration pour les fichiers (optionnel)
 spring.servlet.multipart.max-file-size=10MB
@@ -26,3 +26,8 @@ springdoc.api-docs.path=/v3/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
 
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
+
+
+# Logging pour debug à activer les logs détaillés
+logging.level.ma.Vala.Boutique=DEBUG
+logging.level.org.springframework.web=DEBUG
