l'ajout les images des produits a cloudinary

--- a/frontend-angular/tsconfig.json
+++ b/frontend-angular/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "incremental": false,
     "strict": true,
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true,
