--- a/frontend-angular/package.json
+++ b/frontend-angular/package.json
@@ -31,6 +31,8 @@
     "@angular/platform-browser-dynamic": "^20.1.1",
     "@angular/router": "^20.1.0",
     "@fortawesome/fontawesome-free": "^7.0.0",
+    "bootstrap": "^5.3.7",
+    "font-awesome": "^4.7.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
