--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8085
 
 spring.datasource.url=jdbc:mysql://localhost:3306/ma-boutique-db?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=${DB_PASSWORD:}
 
 spring.jpa.hibernate.ddl-auto=update
 
@@ -13,10 +13,11 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 spring.mvc.format.date=yyyy-MM-dd
 
 
-# Configuration Cloudinary
-cloudinary.cloud_name=duqpq0teg
-cloudinary.api_key=364578432324232
-cloudinary.api_secret=3jOX4u6iPm74-Z2OKyKjbrAgGZo
+# Cloudinary
+cloudinary.cloud_name=${CLOUDINARY_CLOUD_NAME}
+cloudinary.api_key=${CLOUDINARY_API_KEY}
+cloudinary.api_secret=${CLOUDINARY_API_SECRET}
+
 
 # Configuration pour les fichiers (optionnel)
 spring.servlet.multipart.max-file-size=10MB
@@ -31,3 +32,31 @@ spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.ser
 # Logging pour debug à activer les logs détaillés
 logging.level.ma.Vala.Boutique=DEBUG
 logging.level.org.springframework.web=DEBUG
+
+# ==========================================
+# CONFIGURATION EMAIL
+# ==========================================
+# Configuration Gmail SMTP
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=${EMAIL_USERNAME}
+spring.mail.password=${EMAIL_PASSWORD}
+
+# Propriétés SMTP
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.connectiontimeout=10000
+spring.mail.properties.mail.smtp.timeout=10000
+spring.mail.properties.mail.smtp.writetimeout=10000
+
+# Configuration SSL/TLS pour Gmail
+spring.mail.properties.mail.smtp.ssl.protocols=TLSv1.2
+spring.mail.properties.mail.smtp.ssl.ciphersuites=TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256
+
+# Contact
+app.contact.email.to=${CONTACT_EMAIL_TO}
+app.contact.email.from=${CONTACT_EMAIL_FROM}
+
+# Préfixe du sujet des emails
+app.contact.email.subject.prefix=[VALA AUTO RENT - Contact] 
