last version avant de continuer le processus de reservation

--- a/.env
+++ b/.env
@@ -6,9 +6,9 @@ EMAIL_USERNAME=valaautorent@gmail.com
 EMAIL_PASSWORD=bsfo uvmu wfbi asqe
 
 # Cloudinary
-CLOUDINARY_CLOUD_NAME=duqpq0teg
-CLOUDINARY_API_KEY=364578432324232
-CLOUDINARY_API_SECRET=3jOX4u6iPm74-Z2OKyKjbrAgGZo
+cloudinary.cloud-name=duqpq0teg
+cloudinary.api-key=364578432324232
+cloudinary.api-secret=3jOX4u6iPm74-Z2OKyKjbrAgGZo
 
 # Contact
 CONTACT_EMAIL_TO=valaautorent@gmail.com
