--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,9 +14,10 @@ spring.mvc.format.date=yyyy-MM-dd
 
 
 # Cloudinary
-cloudinary.cloud_name=${CLOUDINARY_CLOUD_NAME}
-cloudinary.api_key=${CLOUDINARY_API_KEY}
-cloudinary.api_secret=${CLOUDINARY_API_SECRET}
+cloudinary.cloud-name=${CLOUDINARY_CLOUD_NAME}
+cloudinary.api-key=${CLOUDINARY_API_KEY}
+cloudinary.api-secret=${CLOUDINARY_API_SECRET}
+
 
 
 # Configuration pour les fichiers (optionnel)
