l'ajout de quelque méthode de paiment

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -61,3 +61,14 @@ app.contact.email.from=${CONTACT_EMAIL_FROM}
 
 # Préfixe du sujet des emails
 app.contact.email.subject.prefix=[VALA AUTO RENT - Contact] 
+
+# PayPal Sandbox (pour les tests)
+paypal.client.id=ARLE-KFqNNURk7TQ6QOVf6r3rfMqjnc_1W8KUKteFybxELpqPPWLyVwh77S7_hvdIMy-GRq5uxngZyZH
+paypal.client.secret=ENDRcpm25IBJ8U7NGnFk0gUUp6HffvP2O-tFj1qZ79XaslFgYJTHGTXfJe1DzcwJmcx7mtw5YvKfoWi9
+paypal.mode=sandbox
+
+
+# URLs de retour PayPal
+app.frontend.base-url=http://localhost:4200
+app.paypal.success-url=/payment-success
+app.paypal.cancel-url=/payment-cancel
