--- a/frontend-angular/package.json
+++ b/frontend-angular/package.json
@@ -32,7 +32,9 @@
     "@angular/router": "^20.1.0",
     "@fortawesome/fontawesome-free": "^7.0.0",
     "bootstrap": "^5.3.7",
+    "chart.js": "^4.5.0",
     "font-awesome": "^4.7.0",
+    "ng2-charts": "^4.1.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
@@ -41,6 +43,7 @@
     "@angular/build": "^20.1.0",
     "@angular/cli": "^20.1.0",
     "@angular/compiler-cli": "^20.1.0",
+    "@types/chart.js": "^2.9.41",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.8.0",
     "karma": "~6.4.0",
